рефакторинг payments service
